# pulumi-provider-dex

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  schema.json  test-preview.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/pulumi-resource-dex/: client.go  connector.go  connectors_opinionated.go  main.go  preview.go
docs/: _index.md  concept.md  implementation_plan.md  installation-configuration.md  prd.md
examples/: README.md  dex-config.yaml
examples/dex-debug/: README.md  go.mod  go.sum
examples/simple-client/: client.go  connector.go  go.mod  main.go  types.go
examples/typescript/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  TESTING.md  index.ts  package-lock.json  package.json  tsconfig.json
pkg/provider/: config.go  errors.go  (+1 more)
scripts/: fix-typescript-exports.sh  test-npm-package.sh
sdk/python/python/: pyproject.toml  setup.py
sdk/python/python/pulumi_kotaicode_dex/: README.md  __init__.py  _inputs.py  _utilities.py  azure_microsoft_connector.py  azure_oidc_connector.py  client.py  cognito_oidc_connector.py  connector.py  outputs.py  provider.py
sdk/python/python/pulumi_kotaicode_dex/config/: __init__.pyi  vars.py
sdk/python/python/pulumi_kotaicode_dex/resources/: __init__.py  _inputs.py  azure_microsoft_connector.py  azure_oidc_connector.py  client.py  cognito_oidc_connector.py  connector.py  git_hub_connector.py  git_lab_connector.py  google_connector.py  local_connector.py  outputs.py
simple-client/: go.sum
(+114 files in other folders)
