[project]
  name = "pulumi_kotaicode_dex"
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["category/cloud", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.1.0"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_kotaicode_dex = ["py.typed", "pulumi-plugin.json"]
